Code smells (#1539)
Co-authored-by: Andrey Pereverzin <andrey.pereverzin@hmcts.net>
Co-authored-by: MUSTAFA <mustafa.dayican@hmcts.net>